--- a/package.json
+++ b/package.json
@@ -9,21 +9,38 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/react": "^1.2.12",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "ai": "^4.3.19",
+    "class-variance-authority": "^0.7.1",
+    "fumadocs-core": "15.6.6",
+    "fumadocs-mdx": "^11.7.1",
+    "fumadocs-ui": "15.6.6",
+    "hast-util-to-jsx-runtime": "^2.3.6",
+    "lucide-react": "^0.525.0",
     "next": "15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.6.6",
-    "fumadocs-core": "15.6.6",
-    "fumadocs-mdx": "11.7.1"
+    "react-medium-image-zoom": "^5.3.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.2",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/mdx": "^2.0.13",
     "@types/node": "24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "typescript": "^5.8.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.11",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "postcss": "^8.5.6"
+    "typescript": "^5.8.3"
   }
 }
