--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-rehype": "^11.1.2",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.10"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
