--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
+    "@next/font": "14.2.15",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-medium-image-zoom": "^5.3.0",
