--- a/package.json
+++ b/package.json
@@ -39,8 +39,15 @@
     "@types/node": "24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "lightningcss": "^1.25.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
+  },
+  "optionalDependencies": {
+    "lightningcss-linux-x64-gnu": "^1.25.1",
+    "lightningcss-linux-x64-musl": "^1.25.1",
+    "lightningcss-darwin-x64": "^1.25.1",
+    "lightningcss-darwin-arm64": "^1.25.1"
   }
 }
