--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "next build",
     "dev": "next dev --turbo",
     "start": "next start",
-    "postinstall": "fumadocs-mdx && ./scripts/install-lightningcss.sh || true",
-    "install:lightningcss": "./scripts/install-lightningcss.sh"
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
@@ -40,18 +39,8 @@
     "@types/node": "24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "lightningcss": "^1.25.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
-  },
-  "optionalDependencies": {
-    "lightningcss-linux-x64-gnu": "1.25.1",
-    "lightningcss-linux-x64-musl": "1.25.1",
-    "lightningcss-linux-arm64-gnu": "1.25.1",
-    "lightningcss-linux-arm64-musl": "1.25.1",
-    "lightningcss-darwin-x64": "1.25.1",
-    "lightningcss-darwin-arm64": "1.25.1",
-    "lightningcss-win32-x64-msvc": "1.25.1"
   }
 }
